# a44

./: CMakeLists.txt
config/: simulation_config.txt
examples/: sample_mesh.txt
include/assembly/: StiffnessAssembler.h
include/common/: Types.h
include/io/: MeshIO.h  ResultIO.h  SparseIO.h
include/mesh/: MeshGenerator.h
include/solver/: CGSolver.h  ParallelCGSolver.h
include/sparse/: SparseMatrix.h
include/utils/: CmdLineParser.h
src/: main.cpp
src/assembly/: StiffnessAssembler.cpp
src/io/: MeshIO.cpp  ResultIO.cpp  SparseIO.cpp
src/mesh/: MeshGenerator.cpp
src/solver/: CGSolver.cpp  ParallelCGSolver.cpp
src/sparse/: SparseMatrix.cpp
src/utils/: CmdLineParser.cpp
tests/: CMakeLists.txt  test_assembly.cpp  test_io.cpp  test_main.cpp  test_mesh.cpp  test_parallel.cpp  test_solver.cpp  test_sparse.cpp
